--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -578,6 +578,7 @@ p
 .cartmain
   width: 100%
   height: 100vh
+  // position: inherit
   background: url("../assets/imgs/background.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
@@ -586,7 +587,7 @@ p
 .title
   height: 70px
   width: 100%
-  position: absolute
+  position: fixed
   top: 94px
   background-color: #222
   color: white
@@ -607,7 +608,7 @@ p
   left: -300px
 
 .options
-  height: 100%
+  height: 3560px
   width: 50%
   right: 0
   position: absolute
@@ -615,34 +616,139 @@ p
   // opacity: .9
   z-index: 0
 
+.transmition
+  height: 315px
+  width: 300px
+  margin: 100px 30px
+  background-color: #09f
+  font-family: sans-serif
+
+.options h1
+  color: white
+  font-family: sans-serif
+
+.options h3
+  color: white
+  font-family: sans-serif
+
+.options h5
+  color: white
+
+.color
+  height: 50px
+  width: 50px
+  background-color: white
+  position: relative
+  display: inline-block
+
+.leather
+  height: 50px
+  width: 50px
+  background-color: brown
+  position: relative
+  display: inline-block
+
+.packages
+  height: 256px
+  width: 615px
+  background-color: white
+
+.accessories
+  height: 250px
+  width: 200px
+  margin: 10px
+  position: relative
+  background-color: white
+  display: inline-block
+
+.summary
+  height: 620px
+  width: 891px
+  background-color: black
+  color: white
+  margin: auto
+  opacity: .8
+
+.shopcon
+  height: auto
+  width: 700px
+  position: relative
+  margin: auto
+  border: 1px solid white
+  text-align: center
+
+.shop
+  height: 130px
+  width: 195px
+  margin: 0 10px
+  position: relative
+  background-color: black
+  opacity: .8
+  display: inline-block
+  color: white
+
+.shop h5
+  height: auto
+  width: auto
+  margin: 0 auto
+  position: relative
+  bottom: 0
+
 .foot
   height: 70px
   width: 50%
-  position: absolute
+  position: fixed
   background-color: #222
   opacity: .9
   bottom: 0
   color: white
-  display: inline-block
 
 .viewcon
   height: 100%
-  width: 650px
-  position: absolute
-  left: 150px
-  border: 1px dotted white
-  display: inline-block
-  vertical-align: middle
-  margin: auto 0
+  width: 671px
+  position: relative
+  // border: 1px dotted white
+  // display: inline-block
+  margin: 0 auto
 
 .view
   height: 100%
-  width: 100px
+  width: auto
   position: relative
   display: inline-block
   text-align: center
-  // vertical-align: middle
 
+.view h3
+  font-size: 1rem
+  // vertical-align: middle
+.finalbuild
+  height: 70px
+  width: 100%
+  bottom: 0
+  position: fixed
+  background-color: #FAFAFA
+  display: inline-block
+
+.builddets
+  width: 100%
+  height: 100%
+  position: relative
+  display: inline-block
+
+#price
+  height: 100%
+  width: 300px
+  background-color: #FAFAFA
+
+#testd
+  height: 100%
+  width: 225px
+  color: #09f
+
+#checkout
+  height: 100%
+  width: 150px
+  background-color: #09f
 
 .carmain
     height: 855px
