--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -6,7 +6,73 @@
   <div class="cartmain">
     <div class="update" type="text" name="update" ng-model="item">
 
-    <div class="options"></div>
+    <div class="options">
+      <div class="finalbuild">
+        <div id="price" class="builddets">$$$$$$</div>
+        <div id="testd" class="builddets">SCHEDULE</div>
+        <div id="checkout" class="builddets">CHECKOUT</div>
+      </div>
+      <h1>Transmission</h1>
+    <div class="transmition">
+
+      Automatic Lineartronic® CVT
+    </div>
+
+    <h3>EXTERIOR</h3>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+
+    <h3>INTERIOR</h3>
+    <div class="leather"></div>
+    <div class="leather"></div>
+
+    <h1>Packages</h1>
+
+    <div class="packages"></div>
+
+    <h1>Accessories</h1>
+    <div class="accessories"></div>
+    <div class="accessories"></div>
+    <div class="accessories"></div>
+    <div class="accessories"></div>
+    <div class="accessories"></div>
+    <div class="accessories"></div>
+
+    <h5>Manufacturer's suggested retail price for accessories installed by the manufacturer. Actual <br>
+      prices for retailer installed accessories may vary.</h5>
+
+    <h5>	Package and accessories prices do not include installation costs. Actual price is set by <br>
+      retailer and may differ based on local installation labor costs.</h5>
+
+    <h1>Summary</h1>
+    <div class="summary">
+      <h5>{{vehicle.model}}</h5>
+    </div>
+
+    <h1>Shop {{vehicle.model}}</h1>
+<div class="shopcon">
+    <div class="shop">
+      <img class="inven">
+      <h5>LOCAL INVENTORY</h5>
+    </div>
+    <div class="shop">
+      <h5>SPECIAL OFFERS</h5>
+    </div>
+    <div class="shop">
+      <h5>APPLY FOR FINANCING</h5>
+    </div>
+</div>
+    <h5>Legal Disclaimers</h5>
+
+    </div>
+
   <button class="change" ng-click="changeData( { id : data.text_id , newtask: item }, $index )"> Change Task</button>
     </div>
 
