--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -368,8 +368,6 @@ p
   margin: 0 auto
 
 
-
-
 .yearselector
   font-size: .8125rem
 
@@ -381,9 +379,16 @@ p
   border-left: 2px #EFEFEF solid
   color: white
   background-color: #0099FF
+  cursor: pointer
 
 #build:hover
   background-color: #232323
+  color: white
+
+#compare:hover
+  background: #232323
+  cursor: pointer
+  color: white
 
 .choose
   position: relative
@@ -980,4 +985,20 @@ p
   position: relative
   display: inline-flex
   justify-content: center
+  color: white
+
+.social
+  background-color: white
+  position: absolute
+
+.footercolumn
+  height: auto
+  width: auto
+  position: relative
+  color: white
+
+.column
+  height: auto
+  width: auto
+  position: relative
   color: white
