--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -31,7 +31,7 @@
     </h1>
     <div class="bottomcontent">
       <div class="modelbutton" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
-      <div class="modelbutton">COMPARE</div>
+      <div class="modelbutton" id="compare">COMPARE</div>
       <div class="modelbutton" id="build" ui-sref="cart({vehicle: car._id})">BUILD</div>
     </div>
   </div>
