--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -2,7 +2,7 @@
   <div class="mainpanel">
     <div class="vehicle" ng-repeat="car in cars" ui-sref="vehicles({vehicle: car._id})" style="margin-right: 0">
       <div class="vmodel" style="margin-right: 0">{{car.model}}</div>
-      <div class="price" style="margin-right: 0">{{car.price}}</div>
+      <div class="price" style="margin-right: 0">${{car.price}}</div>
       <img class="icon" src="{{ car.icon }}">
     </div>
 </div>
