--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -38,12 +38,10 @@
     <div class="packages"></div>
 
     <h1>Accessories</h1>
-    <div class="accessories"></div>
-    <div class="accessories"></div>
-    <div class="accessories"></div>
-    <div class="accessories"></div>
-    <div class="accessories"></div>
-    <div class="accessories"></div>
+
+    <div class="accessories" ng-repeat="car in cars">
+
+    </div>
 
     <h5>Manufacturer's suggested retail price for accessories installed by the manufacturer. Actual <br>
       prices for retailer installed accessories may vary.</h5>
