--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -202,6 +202,10 @@ p
   text-align: center
   background-color: #FAFAFA
 
+.items h1
+  position: absolute
+
+
 .items:hover
   cursor: pointer
   border-bottom: 3px solid #333333;
@@ -216,7 +220,7 @@ p
   transition: 600ms ease-out
   position: relative
   display: inline-block
-  top: 10px
+  top: 55px
   right: 200px
   width: 956px
   height: 568px
@@ -232,7 +236,7 @@ p
   position: relative
   display: inline-block
   right: 200px
-  top: 10px
+  top: 55px
   margin: 0
   border: .5px solid #CCCCCC
 
@@ -658,13 +662,14 @@ p
   width: 615px
   background-color: white
 
-.accessories
+.accessory
   height: 250px
   width: 200px
   margin: 10px
   position: relative
   background-color: white
   display: inline-block
+  color: black
 
 .summary
   height: 620px
@@ -678,6 +683,7 @@ p
   height: auto
   width: 700px
   position: relative
+  display: inline-flex
   margin: auto
   border: 1px solid white
   text-align: center
@@ -733,6 +739,9 @@ p
   position: fixed
   background-color: #FAFAFA
   display: inline-block
+
+.finalbuild h1
+  color: black
 
 .builddets
   width: 100%
@@ -861,7 +870,6 @@ p
 
 
 .promise
-  width: 100%
   color: white
   background-color: #0FA4DC
   display: flex
