--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -234,11 +234,22 @@ p
   width: 960px
   background-color: #FAFAFA
   position: relative
-  display: inline-block
+  display: flex
   right: 200px
   top: 55px
   margin: 0
   border: .5px solid #CCCCCC
+
+.shopping
+  height: auto
+  position: relative
+  display: inline-block
+  margin:  auto
+  border: 1px solid black
+  line-height: 16px
+  color: #0099FF
+
+
 
 // .mainpanel
 //   height: 499px
