--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -41,8 +41,10 @@
 
     <h1>Accessories</h1>
 
-    <div class="accessory" ng-repeat="accessory in options">
-    {{acessory}}
+    <div class="accessories">
+      <div class="accessory" ng-repeat="accessory in accessories">
+        {{accessory}}
+      </div>
     </div>
 
     <h5>Manufacturer's suggested retail price for accessories installed by the manufacturer. Actual <br>
