--- a/public/views/panel.html
+++ b/public/views/panel.html
@@ -1,6 +1,6 @@
-<div class="vehiclepanel">
+
   <!-- <img src="../assets/imgs/impreza.JPG"> -->
-  <div class="vehicleinfo">
+
     <div class="model">
       <div class="modelyear">
         <h3>{{vehicle.year}}
@@ -15,3 +15,4 @@
         {{vehicle.cmpg}}
         HwyCity
       </div>
+</div>
