--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -1,6 +1,6 @@
 <div class="vehicledropdown">
   <div class="mainpanel">
-    <div class="vehicle" ng-repeat="car in cars" ui-sref="vehicles({vehicle: car._id})" style="margin-right: 0">
+    <div class="vehicle" ng-mouseover="vehicles({vehicles: car._id })" ng-repeat="car in cars" ui-sref="vehicles({vehicle: car._id})" style="margin-right: 0">
       <div class="vmodel" style="margin-right: 0">{{car.model}}</div>
       <div class="price" style="margin-right: 0">${{car.price}}</div>
       <img class="icon" src="{{ car.icon }}">
@@ -8,10 +8,13 @@
 </div>
 
 <div class="blah">
+
+
   <div class="vehiclepanel">
-    <!-- <img src="../assets/imgs/impreza.JPG"> -->
+
     <div class="vehicleinfo">
-      <div class="model">
+      <panel ng-show="showpanel">
+      <!-- <div class="model">
         <div class="modelyear">
           <h3>{{cars[0].year}}
           {{cars[0].model}}</h3>
@@ -27,7 +30,7 @@
         </h4>
         </div>
 
-      </div>
+      </div> -->
 
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
@@ -38,4 +41,6 @@
   </div>
 </div>
 <div class="vehiclelistother" ui-sref="all">All Vehicles</div>
+<div class="vehiclelistother" ui-sref="all">Certified Pre-Owned</div>
+<div class="vehiclelistother" ui-sref="all">Future Vehicles and Concepts</div>
 </div>
