--- a/public/views/shopping.html
+++ b/public/views/shopping.html
@@ -1,34 +1,38 @@
 <div class="shoppingcon">
 
-<div class="research">
-  <ul>Buil & Price</ul>
-  <ul>Compare Vehicles</ul>
-  <ul>Local Inventory</ul>
-  <ul>Special Offers</ul>
-  <ul>View a Brochure</ul>
+<div id="research" class="shopping">
+  <h3>RESEARCH</h3>
+    <ul>Buil & Price</ul>
+    <ul>Compare Vehicles</ul>
+    <ul>Local Inventory</ul>
+    <ul>Special Offers</ul>
+    <ul>View a Brochure</ul>
 </div>
-<div class="buy">
-  <ul>Payment Calculator</ul>
-  <ul>Trade-in Appraisal</ul>
-  <ul>Financing/Leasing</ul>
-  <ul>Free Equifax Credit Score</ul>
-  <ul>Extended Service Plans</ul>
-  <ul>Parts & Service</ul>
+<div id="buy" class="shopping">
+  <h3>BUY</h3>
+    <ul>Payment Calculator</ul>
+    <ul>Trade-in Appraisal</ul>
+    <ul>Financing/Leasing</ul>
+    <ul>Free Equifax Credit Score</ul>
+    <ul>Extended Service Plans</ul>
+    <ul>Parts & Service</ul>
 </div>
 
-<p>Get the most precise number<br>
-on the Subaru you want
-</p>
+<div id="local" class="shopping">
+  <p>Get the most precise number<br>
+  on the Subaru you want
+  </p>
 
-<h3>YOUR RETAILER</h3> <h2>CHANGE</h2>
+  <h3>YOUR RETAILER</h3> <h2>CHANGE</h2>
 
 
-<h2>Doug Smith Subaru</h2>
+  <h2>Doug Smith Subaru</h2>
 
-<h4>501 W Main St<br>
-American Fork, UT 84003<br>
-(801)492-0100</h4>
+  <h4>501 W Main St<br>
+  American Fork, UT 84003<br>
+  (801)492-0100</h4>
 
-<h2>GET A LOCAL PRICE</h2>
+  <h2>GET A LOCAL PRICE</h2>
+</div>
 
 </div>
