--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -80,6 +80,30 @@ body
   width: 500px
   margin: 0 auto
 
+.items
+  height: auto
+  display: inline-block
+  text-align: center
+  background-color: #FAFAFA
+  margin: 15px
+
+.items h1
+  position: absolute
+
+
+.items:hover
+  cursor: pointer
+  border-bottom: 3px solid #333333
+
+#vehicles
+  width: 80px
+
+#tools
+  width: 125px
+
+#why
+  width: 104px
+
 .sideitems
   height: 30px
   width: 320px
@@ -195,20 +219,6 @@ p
   color: white
   z-index: 1
 
-.items
-  height: 100%
-  width: 170px
-  display: inline-block
-  text-align: center
-  background-color: #FAFAFA
-
-.items h1
-  position: absolute
-
-
-.items:hover
-  cursor: pointer
-  border-bottom: 3px solid #333333;
 
 .links
   height: 200px
@@ -220,7 +230,7 @@ p
   transition: 600ms ease-out
   position: relative
   display: inline-block
-  top: 55px
+  top: 40px
   right: 200px
   width: 956px
   height: 568px
@@ -236,7 +246,7 @@ p
   position: relative
   display: flex
   right: 200px
-  top: 55px
+  top: 40px
   margin: 0
   border: .5px solid #CCCCCC
 
@@ -268,7 +278,7 @@ p
   position: relative
   height: 100%
   width: 100%
-  background: url("../assets/imgs/impreza.JPG") center 100% no-repeat
+  // background: url("../assets/imgs/impreza.JPG") center 100% no-repeat
 
 .icon
   height: 40px
