--- a/public/views/panel.html
+++ b/public/views/panel.html
@@ -1,7 +1,7 @@
 
   <!-- <img src="../assets/imgs/impreza.JPG"> -->
 
-    <div class="model">
+    <!-- <div class="model">
       <div class="modelyear">
         <h3>{{vehicle.year}}
         {{vehicle.model}}</h3>
@@ -15,4 +15,4 @@
         {{vehicle.cmpg}}
         HwyCity
       </div>
-</div>
+</div> -->
