--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -10,7 +10,7 @@
 <div class="blah" ng-init="Outback = true">
 
 
-  <div class="vehiclepanel" ng-if="Outback" style="background: url('../assets/imgs/obk.jpg'); center 100% no-repeat;">
+  <div class="vehiclepanel" ng-if="Outback" style="background: url('../assets/imgs/obk.jpg') center 100% no-repeat;">
     <div class="vehicleinfo">
       <div class="model">
         <div class="modelyear">
@@ -33,7 +33,7 @@
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
       <div class="panelmenubut">Compare</div>
-      <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+      <div class="panelmenubut" ui-sref="cart({vehicle: vehicle._id})" >Build & Price</div>
   </div>
 </div>
 
@@ -57,7 +57,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: car._id})" >Build & Price</div>
 </div>
 </div>
 
@@ -84,7 +84,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: car._id})" >Build & Price</div>
 
 
 </div>
@@ -112,7 +112,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: vehicle._id})" >Build & Price</div>
 
 
 </div>
@@ -140,7 +140,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: car._id})" >Build & Price</div>
 
 
 </div>
@@ -168,7 +168,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: vehicle._id})" >Build & Price</div>
 
 
 </div>
@@ -197,7 +197,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="build" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: vehicle._id})" >Build & Price</div>
 
 
 </div>
