--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,3 +1,4 @@
+<title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title>
 <div class="front">
   <div class="special">SEE SPECIAL OFFERS</div>
   <div class="frontlinks">
