--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,6 +13,12 @@
   font-family: sans-serif;
 }
 
+/*.vehiclelist h4 {
+  position: relative;
+  height: 15px;
+  width: auto;
+  margin: auto;
+}*/
 
 .choose h3 {
   height: 23px;
