--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -33,7 +33,7 @@
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
       <div class="panelmenubut">Compare</div>
-      <div class="panelmenubut" ui-sref="cart({vehicle: vehicle._id})" >Build & Price</div>
+      <div class="panelmenubut" ui-sref="cart({vehicle: car._id})" >Build & Price</div>
   </div>
 </div>
 
@@ -203,10 +203,9 @@
 </div>
 </div>
 
+</div>
 
-
-
-<div class="vehiclelistother" ui-sref="all">All Vehicles</div>
-<div class="vehiclelistother" ui-sref="all">Certified Pre-Owned</div>
-<div class="vehiclelistother" ui-sref="all">Future Vehicles and Concepts</div>
+<div class="vehiclelist" ui-sref="all"><h4>All Vehicles</h4></div>
+<div class="vehiclelist" ui-sref="all"><h4>Certified Pre-Owned</h4></div>
+<div class="vehiclelist" ui-sref="all"><h4>Future Vehicles and Concepts</h4></div>
 </div>
