--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,11 +9,14 @@
 
 </div>
 <div class="cars">
+
   <div class="car" ng-repeat= "car in cars" ui-sref="vehicles({vehicle: car._id})">
+    <div class="cardiv">
     <h2>{{car.model}}</h2>
     <img class="carbut" src="{{car.icon}}">
     <div>
       <h3>starting at <span style="color: #414141;">{{car.price}}</span></h3>
+    </div>
     </div>
 
   </div>
