--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -239,6 +239,9 @@ p
   border: .5px solid #CCCCCC
   z-index: 10
 
+#certified
+  border-right: .5px solid #CCCCCC
+  border-left: .5px solid #CCCCCC
 
 .shoppingcon
   height: 387px
@@ -481,12 +484,16 @@ p
 
 .vehiclelist
   height: 80px
-  width: 33%
+  width: 32.5%
   position: relative
   display: inline-block
   bottom: 0
   vertical-align: center
+  background-color: #EFEFEF
   // border: .5px #CCCCCC solid
+
+.vehiclelist:hover
+  background-color: white
 
 
 .vehicle
