--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -16,7 +16,9 @@
       </div>
       <h1>Transmission</h1>
     <div class="transmition">
-
+        {{vehicle.transmission}}
+        {{vehicle.tranimg}}
+        <!-- {{vehicle.transdesc}} -->
 
     </div>
 
