--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -206,6 +206,6 @@
 </div>
 
 <div class="vehiclelist" ui-sref="all"><h4>All Vehicles</h4></div>
-<div class="vehiclelist" ui-sref="all"><h4>Certified Pre-Owned</h4></div>
+<div class="vehiclelist" id="certified" ui-sref="all"><h4>Certified Pre-Owned</h4></div>
 <div class="vehiclelist" ui-sref="all"><h4>Future Vehicles and Concepts</h4></div>
 </div>
