--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -40,8 +40,8 @@
     <h1>Accessories</h1>
 
     <div class="accessories">
-      <div class="accessory" ng-repeat="accessory in accessories">
-        {{accessory}}
+      <div class="accessory" ng-repeat="option in options">
+        {{options}}
       </div>
     </div>
 
