--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -62,6 +62,19 @@ body
 .modelequip
   display: flex
   flex-direction: column
+  list-style-type: none
+  font-family: sans-serif
+  color: #333
+
+.subinfo
+  height: auto
+  width: 100px
+  position: relative
+  font-size: 1.55rem
+  display: flex
+
+.subinfo h3
+  font-size: 1.2rem
 
 .subaruhome
   margin: 11px 0 0 23px
@@ -712,14 +725,17 @@ p
   background-color: white
 
 .accessory
-  height: 250px
-  width: 200px
+  height: 300px
+  width: 280px
   margin: 10px
   position: relative
   background-color: white
   display: inline-block
   color: black
   z-index: 0
+
+.accessory h4
+  position: relative
 
 .summary
   height: 620px
