--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -23,7 +23,18 @@
 
 
   <div class="modelequip">
-      <div class="subinfo"><h3>{{car.year}}{{car.model}}{{car.price}}{{car.hmpg}}{{car.cmpg}}</h3></div>
+      <div class="subinfo">
+        <h3>
+          {{car.year}}{{car.model}}
+        </h3>
+        <h3>
+          {{car.price}}
+        </h3>
+        <h3>
+          {{car.hmpg}}/{{car.cmpg}}
+        </h3>
+
+      </div>
     <h1>
       <li>{{car.feature1}}</li>
       <li>{{car.feature2}}</li>
