--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -734,6 +734,11 @@ p
   color: black
   z-index: 0
 
+.accimg
+  height: 177px
+  width: 100%
+  position: relative
+
 .accessory h4
   position: relative
 
@@ -845,9 +850,10 @@ p
 .carmain h1
   margin: 0
 
+
 .front
   height: 855px
-  width: 100%
+  width: 100vw
   position: relative
   background: url("../assets/imgs/outback.JPG") no-repeat center center
   -webkit-background-size: cover
@@ -859,6 +865,21 @@ p
   flex-wrap: wrap
   align-content: center
 
+// .background2
+//   height: 855px
+//   width: 100vw
+//   position: relative
+//   background: url("../assets/imgs/Impreza.JPG") no-repeat center center
+//   -webkit-background-size: cover
+//   -moz-background-size: cover
+//   background-size: cover
+
+
+.owl-carousel
+  height: 855px
+  width: 100%
+  background-color: blue
+
 .special
   height: 60px
   width: 240px
@@ -867,8 +888,8 @@ p
   color: white
   font-weight: bold
   position: relative
-  margin: 0 auto
-  top: 200px
+  display: flex
+  margin: auto
   text-align: center
 
 .frontlinks
