--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,5 +1,5 @@
 <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title>
-<div class="front">
+<!-- <div class="front">
   <div class="special">SEE SPECIAL OFFERS</div>
   <div class="frontlinks">
     <a><h1>2017 IMPREZA</h1></a>
@@ -7,7 +7,25 @@
     <a><h1>AWARDS</h1></a>
   </div>
 
+</div> -->
+<div class="owl-carousel">
+    <div class="front">
+      <div class="special">
+        <a><h4>SEE SPECIAL OFFERS</h4></a>
+      </div>
+      <div class="frontlinks">
+        <a><h1>2017 IMPREZA</h1></a>
+        <a><h1>SPECIAL OFFERS</h1></a>
+        <a><h1>AWARDS</h1></a>
+      </div>
+    </div>
+    <!-- <div class="background2"> other img </div> -->
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+
 </div>
+
 <div class="cars">
 
   <div class="car" ng-repeat= "car in cars" ui-sref="vehicles({vehicle: car._id})">
