--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -681,12 +681,24 @@ p
   // opacity: .9
   z-index: 0
 
-.transmition
+.transmission
   height: 315px
   width: 300px
-  margin: 100px 30px
-  background-color: #09f
+  margin: 175px 30px
+  background-color: #EFEFEF
   font-family: sans-serif
+  position: relative
+
+.t
+  position: relative
+  height: auto
+  width: auto
+  font-family: sans-serif
+  top: 150px
+
+.transimg
+  height: 177px
+  width: 100%
 
 .options h1
   color: white
@@ -729,8 +741,9 @@ p
   width: 280px
   margin: 10px
   position: relative
-  background-color: white
-  display: inline-block
+  background-color: #EFEFEF
+  display: inline-flex
+  flex-wrap: wrap
   color: black
   z-index: 0
 
@@ -741,6 +754,7 @@ p
 
 .accessory h4
   position: relative
+  margin: 5px
 
 .summary
   height: 620px
