--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -889,10 +889,10 @@ p
 //   background-size: cover
 
 
-.owl-carousel
-  height: 855px
-  width: 100%
-  background-color: blue
+// .owl-carousel
+//   height: 855px
+//   width: 100%
+//   background-color: blue
 
 .special
   height: 60px
