--- a/public/views/main.html
+++ b/public/views/main.html
@@ -20,9 +20,9 @@
       </div>
     </div>
     <!-- <div class="background2"> other img </div> -->
+    <!-- <div> Your Content </div>
     <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
+    <div> Your Content </div> -->
 
 </div>
 
