--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,15 +10,22 @@
 </div> -->
 <div class="owl-carousel">
     <div class="front">
-      <div class="special">
-        <a><h4>SEE SPECIAL OFFERS</h4></a>
-      </div>
-      <div class="frontlinks">
-        <a><h1>2017 IMPREZA</h1></a>
-        <a><h1>SPECIAL OFFERS</h1></a>
-        <a><h1>AWARDS</h1></a>
-      </div>
+        <div class="fronttext">
+          <h1>Get great offers on 2017 forester & Outback<br>
+          Legacy, and Crosstrek models
+          </h1>
+        </div>
+        <div class="special">
+          <a><h4>SEE SPECIAL OFFERS</h4></a>
+        </div>
+        <div class="frontlinks">
+          <a><h1>2017 IMPREZA</h1></a>
+          <a><h1>SPECIAL OFFERS</h1></a>
+          <a><h1>AWARDS</h1></a>
+        </div>
+
     </div>
+
     <!-- <div class="background2"> other img </div> -->
     <!-- <div> Your Content </div>
     <div> Your Content </div>
