--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -19,10 +19,11 @@
     <div class="transmission">
       <img class="transimg" src="{{vehicle.tranimg}}">
         {{vehicle.transmission}}
+        <button class="addtran" ng-click="postCart( { data: vehicle.transmission } )"></button>
     </div>
     <!-- </div> -->
     <h3>EXTERIOR</h3>
-    <div class="color" ng-repeat="color in colors" style="background-color: {{color}}"></div>
+    <div class="color" ng-repeat="color in colors" ng-click="postCart( color )" style="background-color: {{color.colorid}}"></div>
     {{color}}
 
     <h3>INTERIOR</h3>
@@ -43,7 +44,7 @@
         <img class="accimg" src="{{accessory.img}}">
         <h4>{{accessory.accessory}}</h4>
         <h4>${{accessory.price}}</h4>
-        <button class="add" ng-click="postCart( { data: accessory } )"></button>
+        <button class="add" ng-click="addOption(  accessory )"></button>
       </div>
     </div>
 
@@ -55,12 +56,33 @@
 
     <h1>Summary</h1>
     <div class="summary">
+      <div class="car">
       <h5>{{vehicle.model}}</h5>
+      <h5>Base MSRP*</h5><h5>{{vehicle.price}}</h5>
+      <h5>820</h5>
+      </div>
+      <div class="cartran">
+        <h2>Transmission</h2>
+        <h6>{{vehicle.transmission}}</6>
+      </div>
+      <div class="cartcolor">
+        <h2>Exteior</h2>
+        {{vehicle.color}}
+        <h2>Interior</h2>
+        {{vehicle.interior}}
+      </div>
+      <div class="contpackages">
+        <h1>Packages</h1>
+        {{vehicle.model}}
+      </div>
       <div class="addlist">
         <h2>ACCESSORIES</h2>
           <div class="add" ng-repeat="item in cart" | orderBy: 'text_id'>
             <h4>{{item.accessory}}</h4>
           </div>
+      </div>
+      <div class="yourtot">
+        {{vehicle.price}} {{cart}}
       </div>
     </div>
 
